policies/require-signed.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-image-signature
spec:
  validationFailureAction: enforce
  background: false
  rules:
  - name: check-signature
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - poc-demo
    verifyImages:
    - imageReferences:
      - "localhost:5000/poc-app:*"
      mutateDigest: false
      verifyDigest: false
      attestors:
      - count: 1
        entries:
        - keys:
            publicKeys: |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEIY3bnyLlHbub2D9gLVi/NuO73NgT
[...]
              -----END PUBLIC KEY-----
